--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -8,6 +8,8 @@
 
 /*	Border radius */
 @mixin border-radius($radius) {
+	-moz-border-radius: $radius;
+	-webkit-border-radius: $radius;
 	border-radius: $radius;
 }
 
